--- a/Bayesian signal fitting.ipynb
+++ b/Bayesian signal fitting.ipynb
@@ -20,106 +20,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mArgumentError: Module Distributions not found in current path.\nRun `Pkg.add(\"Distributions\")` to install the Distributions package.\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mArgumentError: Module Distributions not found in current path.\nRun `Pkg.add(\"Distributions\")` to install the Distributions package.\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1m_require\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:435\u001b[22m\u001b[22m",
-      " [2] \u001b[1mrequire\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Symbol\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:405\u001b[22m\u001b[22m",
-      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:522\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Plots\n",
-    "using Distributions"
+    "using Distributions\n",
+    "gr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "contralate"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" Contracts/dilates `signal` at position `p` by\n",
     "amount `s`.\"\"\"\n",
-    "function contralate(signal, p, s)\n",
-    "    res = copy(signal)\n",
+    "function contralate!(signal, p, s)\n",
     "    l = length(signal)\n",
     "    if s >= 0 # dilation\n",
-    "        res[p+1::min(l,p+s)] .= res[p]\n",
-    "        res[p+s+1:end] = signal[p+1:end-s]\n",
+    "        s = min(l-p-1,s)\n",
+    "        signal[p+s+1:end] = signal[p+1:end-s]\n",
+    "        signal[p+1:p+s+1] .= signal[p]\n",
     "    else # contraction\n",
-    "        s = -s\n",
-    "        res[p+1:end-s] = signal[p+s+1:end]\n",
-    "        res[end-s+1:end] .= res[end-s]\n",
+    "        s = max(p-1,-s)\n",
+    "        signal[p+1:end-s] = signal[p+s+1:end]\n",
+    "        signal[end-s+1:end] .= signal[end-s]\n",
     "    end\n",
-    "    res\n",
-    "end"
+    "    signal\n",
+    "end\n",
+    "\n",
+    "contralate(signal, p, s) = contralate!(copy(signal), p, s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50-element Array{Int64,1}:\n",
-       "  1\n",
-       "  2\n",
-       "  3\n",
-       "  4\n",
-       "  5\n",
-       "  6\n",
-       "  7\n",
-       "  8\n",
-       "  9\n",
-       " 10\n",
-       " 11\n",
-       " 12\n",
-       " 13\n",
-       "  ⋮\n",
-       " 39\n",
-       " 40\n",
-       " 41\n",
-       " 42\n",
-       " 43\n",
-       " 44\n",
-       " 45\n",
-       " 46\n",
-       " 47\n",
-       " 48\n",
-       " 49\n",
-       " 50"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "a=collect(1:50)"
+    "a=collect(1:50)\n",
+    "scatter([a,contralate(a,5,4),contralate(a,10,-2),contralate(a,45,10),contralate(a,2,-5)],legend=:bottomright)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min(1,2)"
    ]
   },
   {
