Looking more Monte Carlo now...

--- a/Bayesian signal fitting.ipynb
+++ b/Bayesian signal fitting.ipynb
@@ -25,8 +25,7 @@
    "outputs": [],
    "source": [
     "using Plots\n",
-    "using Distributions\n",
-    "gr()"
+    "using Distributions"
    ]
   },
   {
@@ -39,31 +38,38 @@
     "amount `s`.\"\"\"\n",
     "function contralate!(signal, p, s)\n",
     "    l = length(signal)\n",
-    "    if s >= 0 # dilation\n",
+    "    if s == 0 || p < 1 || p > l-1 || l+s < 1 || p+s+1 > l\n",
+    "        return signal\n",
+    "    end\n",
+    "    if s > 0 # dilation\n",
     "        s = min(l-p-1,s)\n",
     "        signal[p+s+1:end] = signal[p+1:end-s]\n",
     "        signal[p+1:p+s+1] .= signal[p]\n",
     "    else # contraction\n",
-    "        s = max(p-1,-s)\n",
+    "        s = min(p-1,-s)\n",
     "        signal[p+1:end-s] = signal[p+s+1:end]\n",
     "        signal[end-s+1:end] .= signal[end-s]\n",
     "    end\n",
     "    signal\n",
     "end\n",
     "\n",
-    "contralate(signal, p, s) = contralate!(copy(signal), p, s)"
+    "contralate(signal, p, s) = contralate!(copy(signal), p, s)\n",
+    "# function contralate(signal, muts)\n",
+    "#     s = copy(signal)\n",
+    "    \n",
+    "# end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "a=collect(1:50)\n",
-    "scatter([a,contralate(a,5,4),contralate(a,10,-2),contralate(a,45,10),contralate(a,2,-5)],legend=:bottomright)"
+    "scatter([a,contralate(a,5,4),contralate(a,10,-2),contralate(a,45,10),contralate(a,4,-5)],legend=:bottomright)"
    ]
   },
   {
@@ -72,7 +78,176 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min(1,2)"
+    "function tryfit(signal, mat, muts)\n",
+    "#     println(muts)\n",
+    "    m = copy(mat)\n",
+    "    mm = @view m[:]\n",
+    "    for i in size(muts, 1)\n",
+    "        contralate!(mm, muts[i,1], muts[i,2]) \n",
+    "    end\n",
+    "    soln = m \\ signal\n",
+    "    residue = norm(m*soln .- signal, 1)\n",
+    "#     println(\"Solution: $soln, residue: $residue, matrix: $(m')\")\n",
+    "    (soln, 1/residue)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = Float64[ 0 0 0 1 2 1 0 0 0 0 0 0\n",
+    "               0 0 0 0 0 0 0 1 0 0 1 0 ]'\n",
+    "sig = Float64[ 0,1,2,1,0,0,0,0,0,0,0,0 ]\n",
+    "scatter([sig,mat])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmut = 4\n",
+    "ntry = 1000\n",
+    "nsample = 900\n",
+    "σs = 4.0 # mutation size prior σ\n",
+    "l,n = size(mat)\n",
+    "npoints = 200\n",
+    "μx = linspace(0.0,l*n,npoints)\n",
+    "σx = linspace(-l/2,l/2,npoints)\n",
+    "# all parameters priors assumed to be normal\n",
+    "# column 1: p (mutation position)\n",
+    "# column 2: s (mutation size)\n",
+    "μ = hcat(fill(l*n/2, nmut), fill(0.0, nmut))\n",
+    "σ = hcat(fill(float(2l*n), nmut), fill(σs, nmut))\n",
+    "\n",
+    "dists = hcat(Truncated.(Normal.(μ[:,1],σ[:,1]),1,l*n), Normal.(μ[:,2],σ[:,2]))\n",
+    "plot(plot(μx,vec([pdf.(d,μx) for d in dists[:,1]])),\n",
+    "    plot(σx,vec([pdf.(d,σx) for d in dists[:,2]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for iterations = 1:10\n",
+    "    pars=Array{Int,2}[]\n",
+    "    weighted_scores = Array{Float64}(ntry)\n",
+    "    for i = 1:ntry\n",
+    "        muts = round.(Int,rand.(dists))\n",
+    "        push!(pars, muts)\n",
+    "        scores = tryfit(sig,mat,muts)\n",
+    "        priors = pdf.(dists, muts)\n",
+    "        weighted_scores[i] = scores[2]^4*sqrt(reduce(*,priors))\n",
+    "    end\n",
+    "\n",
+    "dists = readjust(wsample(pars,weighted_scores,nsample))\n",
+    "# println(collect(zip(pars,weighted_scores)))\n",
+    "# plot(-l:0.1:l,vec([pdf.(d,-l:0.1:l) for d in dists]))\n",
+    "plot(plot(μx,vec([pdf.(d,μx) for d in dists[:,1]])),\n",
+    "    plot(σx,vec([pdf.(d,σx) for d in dists[:,2]])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function readjust(obs)\n",
+    "    [(==(extrema(o[i] for o in obs)...) ? Normal(obs[1][i],0.1) : fit(Normal,[o[i] for o in obs])) for i in CartesianRange(size(obs[1]))]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "==(extrema(1 for x in 1:5)...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=plot()\n",
+    "for x in m\n",
+    "    plot!(x.x,x.density)\n",
+    "end\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i = 1:50\n",
+    "    println(wsample([0.2,0.8]))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=zeros(Int,50)\n",
+    "x.=(()->wsample([0.2,0.8])).()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wsample([1,2,3],[0.1,0.2,0.1],4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand(3)[4:end-1]"
    ]
   },
   {
